--- a/public/index.html
+++ b/public/index.html
@@ -95,4 +95,5 @@
   <script src="./assets/js/dataTables.bootstrap4.min.js"></script>
   <script src="./assets/js/jquery.slimscroll.js"></script>
   <script src="./assets/js/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </html>
